--- a/timecard/index.html
+++ b/timecard/index.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>timecard</title>
+    <title>Timecard</title>
+    <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <app></app>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
